# uComs

./: .gitignore  BUILD  CMakeLists.txt  README.md  example_main.py  example_protocol.yml  microplot.py  microplot_test.py  requirements.txt  runtests.sh  test.yml  ucoms.py  ucoms_test.py
.github/workflows/: gtest.yml  pythonapp.yml
generated_files/: README.md
mako_files/: microplot.h.mako  microplot_actions.c.mako  microplot_actions.cc.mako  microplot_init.c.mako  microplot_init.cc.mako  microplot_parse.c.mako  microplot_parse.cc.mako  ucoms.cc.mako  ucoms.h.mako  ucoms_actions.c.mako  ucoms_actions.cc.mako  ucoms_decode.c.mako  ucoms_decode.cc.mako  ucoms_decode.h.mako  ucoms_decode_test.h.mako  ucoms_init.c.mako  ucoms_init.cc.mako  ucoms_parse.c.mako  ucoms_parse.cc.mako
tests/: CMakeLists.txt  ucoms_decode_test.cc  ucoms_utils_test.cc
